# constitutional-ai-sandbox

./: .gitignore  BLOG.md  LINKEDIN.md  README.md  render.yaml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/routers/: conflicts.py  generate.py  presets.py
backend/schemas/: generate.py
backend/services/: cai_engine.py  claude_client.py  mock_engine.py  presets.py
backend/tests/: test_cai_engine.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: CaiInfoPanel.tsx  ConflictBanners.tsx  ConstitutionEditor.tsx  DiffView.tsx  HeroEmptyState.tsx  Navbar.tsx  RunHistory.tsx  RunStatsPanel.tsx  TraceCard.tsx  TraceView.tsx
frontend/src/lib/: api.ts  diff.ts  export.ts  history.ts  systemPrompt.ts
