[project]
name = "backend"
version = "0.1.0"
description = "Constitutional AI Sandbox — FastAPI backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.113.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.uv]
dev-dependencies = []
